Add citations and fix Google Scholar button issue
- Add IEEE citations for Supporting Artefact Awareness and MR4FEA papers
- Add Springer citation for MR4FEA-Load paper
- Add HCI-International citation for MR4Assembly paper
- Fix Google Scholar button causing masonry layout to unload
- Replace custom citation icon with Font Awesome fa-quote-left
- Improve citation button visual feedback with checkmark animation

--- a/_includes/components/intro.html
+++ b/_includes/components/intro.html
@@ -5,7 +5,7 @@
     </div>
     <div class="intro-block">
         <p class="intro-text">
-            I'm doing my Ph.D. in CS at SMU, as part of the amazing <a href="https://smuhci.com/">SMU-HCI</a> community, working on human-agent interactions under <a href="https://jchrisli.github.io/">Li Jiannan</a>. Previously, I completed my MComp in CS at NUS, where I worked with <a href="https://www.comp.nus.edu.sg/~zhaosd/">Zhao Shengdong</a>, and my B.Sc. in CS (1st class) from UofG under <a href="https://www.gla.ac.uk/schools/computing/staff/jeanniele/">Jeannie Lee</a>.
+            I'm doing my Ph.D. in CS at Singapore Management University, as part of the amazing <a href="https://smuhci.com/">SMU-HCI</a> community, working on human-agent interactions under <a href="https://jchrisli.github.io/">Li Jiannan</a>. Previously, I completed my MComp in CS at National University of Singapore (NUS), where I worked with <a href="https://www.comp.nus.edu.sg/~zhaosd/">Zhao Shengdong</a> and <a href="https://hcitang.github.io/">Tony Tang</a> from SMU, and my B.Sc. in CS (1st class) from University of Glasgow under <a href="https://www.gla.ac.uk/schools/computing/staff/jeanniele/">Jeannie Lee</a>.
         </p>
     </div>
     <div class="intro-block">
