--- a/_includes/layouts/profile.html
+++ b/_includes/layouts/profile.html
@@ -4,15 +4,17 @@
             <img src="{{ site.profile_image | relative_url }}" alt="{{ site.author }}">
         </div>
         <div class="profile-info">
-            <div class="profile-name"><span class="profile-name-underline">Emran</span> Poh</div>
-            <div class="profile-details">
-                <div class="profile-position">1st Year PhD Student</div>
-                <div class="profile-position">UX Researcher & Designer</div>
-                <div class="profile-university">SMU HAI Lab</div>
-                <div class="profile-location">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <span>{{ site.location }}</span>
+            <div class="profile-main">
+                <div class="profile-name"><span class="profile-name-underline">Emran</span> Poh</div>
+                <div class="profile-details">
+                    <div class="profile-position">1st Year PhD Student</div>
+                    <div class="profile-position">UX Researcher & Designer</div>
+                    <div class="profile-university">SMU HAI Lab</div>
                 </div>
+            </div>
+            <div class="profile-location">
+                <i class="fas fa-map-marker-alt"></i>
+                <span>{{ site.location }}</span>
             </div>
         </div>
     </div>
@@ -32,8 +34,8 @@
 }
 
 .profile-image {
-    width: 80px;
-    height: 80px;
+    width: 200px;
+    height: 200px;
     border-radius: 0.375rem;
     overflow: hidden;
     flex-shrink: 0;
@@ -48,6 +50,23 @@
 .profile-info {
     flex: 1;
     min-width: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.profile-main {
+    display: flex;
+    flex-direction: column;
+}
+
+.profile-location {
+    display: flex;
+    align-items: center;
+    gap: 0.375rem;
+    color: #666;
+    font-size: 0.8125rem;
+    margin-top: auto;
 }
 
 .profile-name {
@@ -71,14 +90,6 @@
 .profile-university {
     font-size: 0.875rem;
     color: #666;
-}
-
-.profile-location {
-    display: flex;
-    align-items: center;
-    gap: 0.375rem;
-    color: #666;
-    font-size: 0.8125rem;
 }
 
 .profile-location i {
