--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -495,6 +495,33 @@ mark {
 }
 /*#endregion*/
 
+/*#region Masonry Links */
+/* Remove underlines from masonry layout links */
+.project-link,
+.pub-image-link,
+.pub-content,
+.tag-link,
+.post-card-link {
+  text-decoration: none !important;
+  
+  &:hover {
+    text-decoration: none !important;
+  }
+}
+
+/* Ensure masonry link content doesn't have underlines */
+.project-link *,
+.pub-image-link *,
+.pub-content *,
+.post-card-link * {
+  text-decoration: none !important;
+  
+  &:hover {
+    text-decoration: none !important;
+  }
+}
+/*#endregion*/
+
 /*#region Projects */
 /* Projects Grid Layout */
 .projects-grid {
@@ -697,7 +724,6 @@ mark {
 
 .pub-image {
   width: 100%;
-  height: 140px;
   background: #f5f5f5;
   display: flex;
   align-items: center;
