--- a/_includes/components/intro.html
+++ b/_includes/components/intro.html
@@ -1,11 +1,11 @@
 <section class="w-full intro-section">
   <div class="h-64 mb-4 introduction">
     <div class="intro-block">
-        <p class="intro-text">I'm a <strong>Human-Agent Interaction researcher</strong> focused on <mark>human creativity</mark>. I design, build, and study tools that help novices develop domain expertise—with an emphasis on empowering humans to be more... human (authentic + expressive). I'm currently working on AI Tutor design to enhance learning experiences through intelligent human-agent collaboration.</p>
+        <p class="intro-text">I'm a <strong>Human-Agent Interaction researcher</strong> working on <mark>human creativity</mark>. I design, build, and study tools that help humans to be more... human (authentic + expressive). I'm currently working on AI Tutor design to enhance learning experiences through intelligent human-agent collaboration.</p>
     </div>
     <div class="intro-block">
         <p class="intro-text">
-            I'm doing my Ph.D. in CS at Singapore Management University, as part of the amazing <a href="https://smuhci.com/">SMU-HCI</a> community, working on human-agent interactions under <a href="https://jchrisli.github.io/">Li Jiannan</a>. Previously, I completed my MComp in CS at National University of Singapore (NUS), where I worked with <a href="https://www.comp.nus.edu.sg/~zhaosd/">Zhao Shengdong</a> and <a href="https://hcitang.github.io/">Tony Tang</a> from SMU, and my B.Sc. in CS (1st class) from University of Glasgow under <a href="https://www.gla.ac.uk/schools/computing/staff/jeanniele/">Jeannie Lee</a>.
+            I'm doing my Ph.D. in CS at Singapore Management University, as part of the amazing <a href="https://smuhci.com/">SMU-HCI</a> community, working on human-agent interactions under <a href="https://jchrisli.github.io/">Li Jiannan</a>. Previously, I completed my Master of Computing<img src="/assets/images/rectangle.svg" class="citation-shape" id="citation-1" alt="Master of Computing publications"> at National University of Singapore (NUS), where I worked with <a href="https://www.comp.nus.edu.sg/~zhaosd/">Zhao Shengdong</a> and <a href="https://hcitang.github.io/">Tony Tang</a> from SMU, and my BSc (Hons) in Computing Science<img src="/assets/images/circle.svg" class="citation-shape" id="citation-2" alt="BSc publications"><img src="/assets/images/circle.svg" class="citation-shape" id="citation-3" alt="BSc publications"><img src="/assets/images/circle.svg" class="citation-shape" id="citation-4" alt="BSc publications"><img src="/assets/images/circle.svg" class="citation-shape" id="citation-5" alt="BSc publications"> from University of Glasgow under <a href="https://www.gla.ac.uk/schools/computing/staff/jeanniele/">Jeannie Lee</a>.
         </p>
     </div>
     <div class="intro-block">
@@ -73,6 +73,23 @@
     padding: 0 0.25rem;
     border-radius: 0.25rem;
     background-color: #fef08a;
+}
+
+.citation-shape {
+    width: 0.5rem;
+    height: 0.5rem;
+    margin-left: 0.125rem;
+    margin-right: 0.0625rem;
+    vertical-align: super;
+}
+
+/* All intro citation shapes use the same grey color */
+#citation-1,
+#citation-2,
+#citation-3,
+#citation-4,
+#citation-5 {
+    filter: brightness(0) saturate(100%) invert(50%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);
 }
 
 .intro-link {
